--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+:root {
+  --area-porta-altura: 31rem;
+  --area-porta-largura: 20rem;
+  font-size: 62.5%; /*1rem = 10px*/
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #444;
+  color: #fff;
 }
 
 a {
@@ -18,9 +26,5 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
   }
 }
